RESOLVED FIXED301111
didGeneratePageLoadTiming not firing for pages without subresources
https://bugs.webkit.org/show_bug.cgi?id=301111
Summary didGeneratePageLoadTiming not firing for pages without subresources
Ben Nham
Reported 2025-10-20 11:36:03 PDT
See PR
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-20 11:36:10 PDT
Ben Nham
Comment 2 2025-10-20 11:39:58 PDT
EWS
Comment 3 2025-10-20 21:06:52 PDT
Committed 301847@main (f0dc7e37dc4e): <https://commits.webkit.org/301847@main> Reviewed commits have been landed. Closing PR #52667 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.