didGeneratePageLoadTiming not firing for pages without subresources https://bugs.webkit.org/show_bug.cgi?id=301111 rdar://163053311

Reviewed by Wenson Hsieh.

The didGeneratePageLoadTiming delegate callback isn't firing for pages without subresources. Fix
this by removing the check for the subresource loading timestamp in generatePageLoadTimingSoon.

Additionally, add signposts and logging around this codepath to make these issues easier to debug,
since we've already gone through several rounds of iteration on this.

Finally, rename generatePageLoadingTiming to generatePageLoadTiming throughout.

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/Navigation.mm
* Source/WTF/wtf/SystemTracing.h:
* Source/WebKit/UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::WebPageProxy::didGeneratePageLoadTiming):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didDestroyFrame):
(WebKit::WebPageProxy::startNetworkRequestsForPageLoadTiming):
(WebKit::WebPageProxy::endNetworkRequestsForPageLoadTiming):
(WebKit::WebPageProxy::generatePageLoadTimingSoon):
(WebKit::WebPageProxy::generatePageLoadTimingSoonImpl):
(WebKit::WebPageProxy::didEndNetworkRequestsForPageLoadTimingTimerFired):
(WebKit::WebPageProxy::didCommitLoadForFrame):
(WebKit::WebPageProxy::didFinishDocumentLoadForFrame):
(WebKit::WebPageProxy::didFinishLoadForFrame):
(WebKit::WebPageProxy::didFirstVisuallyNonEmptyLayoutForFrame):
(WebKit::WebPageProxy::didReachLayoutMilestone):
(WebKit::WebPageProxy::generatePageLoadingTimingSoon): Deleted.
* Source/WebKit/UIProcess/WebPageProxy.h:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/Navigation.mm:
(TEST(WKNavigation, GeneratePageLoadTimingWithNoSubresources)):

Canonical link: https://commits.webkit.org/301847@main