Source/WTF/wtf/SystemTracing.h
@@ -287,6 +287,7 @@ WTF_EXTERN_C_END
     M(JSScriptRef) \
     M(NetworkCacheHit) \
     M(NetworkCacheMiss) \
+    M(PLTSubresourceLoading) \
 
 #define DECLARE_WTF_SIGNPOST_NAME_ENUM(name) WTFOSSignpostName ## name,
 
